--- a/index.html
+++ b/index.html
@@ -2,77 +2,42 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Portfolio</title>
+    <title>My Portfolio</title>
     <style>
         body {
+            font-family: Arial, sans-serif;
             margin: 0;
-            font-family: 'Bodoni FLF', serif;
-            background-color: white;
-            color: black;
+            padding: 0;
+            background-color: #f5f5f5;
+            color: #333;
         }
         header {
-            background-color: black;
-            color: white;
-            padding: 20px;
+            background-color: #333;
+            color: #fff;
             text-align: center;
+            padding: 1rem;
         }
-        .section {
-            padding: 20px;
-            border-bottom: 1px solid #ccc;
+        header h1 {
+            margin: 0;
+            font-size: 2em;
         }
-        .section h2 {
-            font-size: 1.5em;
-            color: black;
+        nav {
+            margin-top: 10px;
         }
-        .section p {
-            font-size: 1em;
-            color: grey;
-        }
-        .contact-info {
-            font-size: 1em;
-        }
-        .project {
-            margin-bottom: 10px;
-        }
-        a {
-            color: black;
+        nav a {
+            color: #fff;
             text-decoration: none;
-            border-bottom: 1px solid black;
+            margin: 0 15px;
+            font-size: 1em;
         }
-        a:hover {
-            border-bottom: 1px solid grey;
+        nav a:hover {
+            text-decoration: underline;
         }
-    </style>
-</head>
-<body>
-    <header>
-        <h1>Your Name's Portfolio</h1>
-    </header>
-
-    <div class="section" id="projects">
-        <h2>Projects</h2>
-        <!-- Example project entries -->
-        <div class="project">
-            <h3>Project 1</h3>
-            <p>Brief description of the project, what it involved, and your role in it.</p>
-        </div>
-        <div class="project">
-            <h3>Project 2</h3>
-            <p>Brief description of the project, what it involved, and your role in it.</p>
-        </div>
-        <div class="project">
-            <h3>Project 3</h3>
-            <p>Brief description of the project, what it involved, and your role in it.</p>
-        </div>
-    </div>
-
-    <div class="section" id="about-contact">
-        <h2>About Me / Contact Me</h2>
-        <p>Write a brief biography or description about yourself, your background, and your interests.</p>
-        <p class="contact-info">Contact me at: 
-            <a href="mailto:your.email@example.com">your.email@example.com</a>
-        </p>
-    </div>
-
-</body>
-</html>
+        section {
+            padding: 2rem;
+        }
+        .projects {
+            background-color: #fff;
+            border-bottom: 1px solid #ddd;
+        }
+        .projects h2
